apps/base/organisers/lidarr/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`lidarr.${CLUSTER_DOMAIN}`)
      services:
        - name: lidarr
          port: 8686
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
    - kind: Rule
      match: Host(`lidarr.${CLUSTER_DOMAIN}`)  && PathPrefix(`/api`)
      services:
        - name: lidarr
          port: 8686
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
  tls:
    certResolver: cloudflare
